trying to fix font size on iphone xr

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/* @media (max-width: @screen-xs) {
-    body{font-size: 10px !important;}
-}
-
-@media (max-width: @screen-sm) {
-    body{font-size: 24px !important;}
-} */
+/* 1792x828px at 326ppi */
+@media only screen
+    and (device-width : 414px)
+    and (device-height : 896px)
+    and (-webkit-device-pixel-ratio : 2) {
+    font-size: 2rem;
+  }
 
 
 body {
